# ISProject

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
EdEditor/: CMakeLists.txt  imgui.ini
EdEditor/src/: EdEditor.cpp  Editor.cpp  Editor.h
EdEditor/src/Widgets/: ActorDetailsWidget.cpp  ActorDetailsWidget.h  AssetDetails.cpp  AssetDetails.h  CameraDetailsWidget.cpp  CameraDetailsWidget.h  ComponentDetailsWidget.cpp  ComponentDetailsWidget.h  ContentBrowserWidget.cpp  ContentBrowserWidget.h  OptionsMenuWidget.cpp  OptionsMenuWidget.h  RendererStatsWidget.cpp  RendererStatsWidget.h  SceneTreeWidget.cpp  SceneTreeWidget.h  TransformationDetailsWidget.cpp  TransformationDetailsWidget.h  ViewportWidget.cpp  ViewportWidget.h
EdEngine/: CMakeLists.txt  imgui.ini
EdEngine/src/Core/: BaseManager.cpp  BaseManager.h  Ed.h  EdTime.h  Engine.cpp  Engine.h  Input.cpp  Input.h  LogManager.cpp  LogManager.h  Macros.h  Scene.cpp  Scene.h  Widget.cpp  Widget.h  Window.cpp  Window.h
EdEngine/src/Core/Assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Character.cpp  Character.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Material.cpp  Material.h  StaticMesh.cpp  StaticMesh.h
EdEngine/src/Core/Assets/Factories/: AssetFactory.cpp  AssetFactory.h  TemplatedAssetFactory.h
EdEngine/src/Core/Assets/ImportParameters/: AssetImportParameters.cpp  AssetImportParameters.h  MaterialImportParameters.h  StaticMeshImportParameters.cpp  StaticMeshImportParameters.h  TextureImportParameters.cpp  TextureImportParameters.h
EdEngine/src/Core/Assets/Importers/: AssetImporter.cpp  AssetImporter.h  MaterialAssetImporter.cpp  MaterialAssetImporter.h  StaticMeshImporter.cpp  StaticMeshImporter.h  Texture2DAssetImporter.cpp  Texture2DAssetImporter.h
EdEngine/src/Core/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  LightComponent.cpp  LightComponent.h  PointLightComponent.cpp  PointLightComponent.h  SpotLightComponent.cpp  SpotLightComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h
EdEngine/src/Core/Math/: Camera.cpp  Camera.h  Transform.cpp  Transform.h
EdEngine/src/Core/Objects/: Actor.cpp  Actor.h  Class.h  GameObject.cpp  GameObject.h  PlayerActor.cpp  PlayerActor.h
EdEngine/src/Core/Rendering/: EdRendering.h  Framebuffer.cpp  Framebuffer.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  RenderingContex.cpp  RenderingContex.h  Resource.h  Shader.h  Types.cpp  Types.h
EdEngine/src/Core/Rendering/Buffers/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
EdEngine/src/Core/Rendering/Passes/: AmbientPass.cpp  AmbientPass.h  EmissionPass.cpp  EmissionPass.h  FXAAPass.cpp  FXAAPass.h  GBufferPass.cpp  GBufferPass.h  GrayscalePass.cpp  GrayscalePass.h  RenderPass.cpp  RenderPass.h  ResolutionPass.cpp  ResolutionPass.h  TAAPass.cpp  TAAPass.h
EdEngine/src/Core/Rendering/Passes/Bloom/: BloomDownscalePass.cpp  BloomDownscalePass.h  BloomMultiPass.cpp  BloomMultiPass.h  BloomUpscalePass.cpp  BloomUpscalePass.h
EdEngine/src/Core/Rendering/Passes/Editor/: IconsPass.cpp  IconsPass.h
EdEngine/src/Core/Rendering/Passes/Lighting/DirectionalLight/: DirectionalLightMultiPass.cpp  DirectionalLightMultiPass.h  DirectionalLightShadingPass.cpp  DirectionalLightShadingPass.h  DirectionalLightShadowPass.cpp  DirectionalLightShadowPass.h
EdEngine/src/Core/Rendering/Passes/Lighting/PointLight/: PointLightMultiPass.cpp  PointLightMultiPass.h  PointLightShadingPass.cpp  PointLightShadingPass.h  PointLightShadowPass.cpp  PointLightShadowPass.h  PointLightWireframePass.cpp  PointLightWireframePass.h
EdEngine/src/Core/Rendering/Passes/Lighting/SpotLight/: SpotLightMultiPass.cpp  SpotLightMultiPass.h  SpotLightShadingPass.cpp  SpotLightShadingPass.h  SpotLightShadowPass.cpp  SpotLightShadowPass.h  SpotLightWireframePass.cpp  SpotLightWireframePass.h
EdEngine/src/Core/Rendering/Passes/Parameters/: ParametersCommon.h  RenderGraphParameters.h  RenderPassParameters.h  ShaderParameters.h
EdEngine/src/Core/Rendering/Passes/SSAO/: SSAOBlurPass.cpp  SSAOBlurPass.h  SSAOMultiPass.cpp  SSAOMultiPass.h  SSAOPass.cpp  SSAOPass.h
EdEngine/src/Core/Rendering/Textures/: CubeTexture.cpp  CubeTexture.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h  TextureData.cpp  TextureData.h
EdEngine/src/Helpers/: AssetHelper.cpp  AssetHelper.h  FilesHelper.cpp  FilesHelper.h  GeometryBuilder.cpp  GeometryBuilder.h  MathHelper.cpp  MathHelper.h  PlatformHelper.h  RenderingHelper.cpp  RenderingHelper.h  RenderingHelper.hpp  Serializable.cpp  Serializable.h  SerializationHelper.cpp  SerializationHelper.h
EdEngine/src/Platform/: WindowsPlatformHelper.cpp
EdEngine/src/Platform/Rendering/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderingContext.cpp  OpenGLRenderingContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTypes.cpp  OpenGLTypes.h  OpenGLWindow.cpp  OpenGLWindow.h
EdEngine/src/Platform/Rendering/OpenGL/Buffers/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
EdEngine/src/Platform/Rendering/OpenGL/Textures/: OpenGLCubeTexture.cpp  OpenGLCubeTexture.h  OpenGLSampler.cpp  OpenGLSampler.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLTexture2DArray.cpp  OpenGLTexture2DArray.h
EdTest/: CMakeLists.txt
EdTest/src/: PlayRecorder.cpp  PlayRecorder.h  PlayRecorderControlsWidget.cpp  PlayRecorderControlsWidget.h
resources/: imgui.ini
resources/PlayRecordings/: fly_over.edprec  spin.edprec  walk_bottom_floor.edprec  walk_top_floor.edprec
resources/scenes/: main_test.edscene
resources/shaders/: Grayscale.glsl  base.glsl  bunny.glsl  cook-torrance.glsl  cook-torrance1.glsl  phong.glsl  ssao.glsl  ssaoBlur.glsl  ssdo-blur.glsl  ssdo.glsl  text.glsl  wireframe.glsl
(+28 files in other folders)
